--- a/ss8_angular_module/bai_tap/image-slide/package.json
+++ b/ss8_angular_module/bai_tap/image-slide/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "case-study",
+  "name": "image-slide",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,8 +19,6 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
-    "json-server": "^0.17.0",
-    "ngx-pagination": "^5.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
